* ext/win32ole/win32ole.c (ole_val2variant): fix the core dump   when converting Array object to VT_ARRAY variant. [ruby-core:28446]   [Bug #2836]

git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/branches/ruby_1_8@27459 b2dd03c8-39d4-4d8f-98ff-823fe69b080e